resolved some redux and fixed styling issues

--- a/src/styles/text-editor.css
+++ b/src/styles/text-editor.css
@@ -27,9 +27,9 @@
 	font-style: italic;
 }
 
-/* .text-editor {
-	color: #fefefe;
-} */
+.text-editor {
+	background-color: rgb(243, 241, 241);
+}
 
 .text-editor .wmde-markdown hr {
 	border-top: 1px solid #dee5ed;
