--- a/src/styles/add-cell.css
+++ b/src/styles/add-cell.css
@@ -1,10 +1,11 @@
 .add-cell {
 	position: relative;
 	opacity: 0;
-	transition: opacity 0.4s;
+	transition: opacity 0.3s ease-in 0.1s;
+	margin: 20px 0;
 }
 
-.force-visible .add-cell {
+.add-cell.force-visible {
 	opacity: 1;
 }
 
